--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass service_course:9000;
+        fastcgi_pass bwamicro_service_course:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
