--- a/.env.example
+++ b/.env.example
@@ -46,4 +46,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 SERVICE_USER_URL=http://your-container-service-user-name:your-container-service-user-port/
-SERVICE_ORDER_PAYMENT_URL=http://your-container-webserver-order-name /
+SERVICE_ORDER_PAYMENT_URL=http://your-container-webserver-order-name/
